--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "cool-ascii-faces": "1.3.3",
+    "ejs": "2.3.3",
     "express": "^4.14.0",
     "nconf": "^0.8.4",
-    "pg": "4.x",
-    "ejs": "2.3.3",
-    "cool-ascii-faces": "1.3.3"
+    "pg": "^4.5.6",
+    "pg-pool": "^1.4.3"
   }
 }
